force-app/main/default/objects/Account_Premise_Ownership__c/Account_Premise_Ownership__c.object-meta.xml
<CustomObject>
    <label>Account Premise Ownership</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Premise Ownership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Premise Ownership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>