force-app/main/default/objects/Account_Premise_Ownership__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Premise Ownership</relationshipLabel>
    <relationshipName>Account_Premise_Ownership</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>