force-app/main/default/objects/Account_Premise_Ownership__c/fields/GEM_Well_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_Well_Cust_ID__c</fullName>
    <description>external Customer-Well ID combination from CRES GEM system</description>
    <inlineHelpText>external Customer-Well ID combination from CRES GEM system</inlineHelpText>
    <label>GEM Well-Cust ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>