force-app/main/default/objects/Account_Premise_Ownership__c/fields/Interest_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Interest_Ownership__c</fullName>
    <description>APO interest ownership is always working interest and is for the producer (PWI).</description>
    <inlineHelpText>APO interest ownership is always working interest and is for the producer (PWI).</inlineHelpText>
    <label>% Interest Ownership</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>