force-app/main/default/objects/Account_Premise_Ownership__c/fields/Lease_Code__c.field-meta.xml
<CustomField>
    <fullName>Lease_Code__c</fullName>
    <description>Unique code for Customer-Well payment</description>
    <inlineHelpText>Unique code for Customer-Well payment</inlineHelpText>
    <label>Lease Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>