force-app/main/default/objects/Account_Premise_Ownership__c/fields/Meter_Name__c.field-meta.xml
<CustomField>
    <fullName>Meter_Name__c</fullName>
    <formula>Premise__r.Premise_Nickname__c</formula>
    <label>Meter Name</label>
    <type>Text</type>
</CustomField>