force-app/main/default/objects/Account_Premise_Ownership__c/fields/Name_Producer_Well__c.field-meta.xml
<CustomField>
    <fullName>Name_Producer_Well__c</fullName>
    <formula>Name &amp; &#39;: &#39; &amp; Account__r.Name &amp; &#39;: &#39; &amp; BLANKVALUE(Premise__r.Premise_Nickname__c,&#39;No Meter Name&#39;) &amp; &#39;: &#39; &amp; BLANKVALUE(Premise__r.Meter_Number__c,&#39;No Meter Number&#39;)</formula>
    <label>Name-Producer-Well</label>
    <type>Text</type>
</CustomField>