force-app/main/default/objects/Account_Premise_Ownership__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Premise Ownership (Payee)</relationshipLabel>
    <relationshipName>Account_Premise_Ownership_Payee</relationshipName>
    <type>Lookup</type>
</CustomField>