force-app/main/default/objects/Account_Premise_Ownership__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Account Premise Ownership</relationshipLabel>
    <relationshipName>Account_Premise_Ownership</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>